--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,31 +24,32 @@ body {
     align-items: center;
     justify-content: space-around;
     height: 200px;
-    width: 550px;
+    max-width: 550px; /* Adicionei uma largura máxima */
+    width: 90%; /* Alterado para largura em percentual */
     background: transparent;
     border-radius: 40px;
-    box-shadow: 0px 8px 10px rgba(0,0,0, .5);
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
 }
 
 .relogio div {
     height: 170px;
-    width: 150px;
+    width: 30%; /* Alterado para largura em percentual */
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #FFF;
     background: rgba(59, 125, 38, 0.9);
-    box-shadow: 5px 5px 15px rgba(0,0,0, .7);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
     border-radius: 80px;
     letter-spacing: 3px;
 }
 
 .relogio span {
-    font-size: 60px;
+    font-size: 4vw; /* Alterado para fonte responsiva usando vw */
     font-weight: bold;
 }
 
 .relogio span.tempo {
-    font-size: 10px;
+    font-size: 1vw; /* Alterado para fonte responsiva usando vw */
 }
